Added Landing Page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
 <resources>
     <string name="app_name">GoOutside</string>
+    <string name="go_outside">Go Outside</string>
+    <string name="logo">logo</string>
 </resources>
