added mock view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
     <string name="app_name">GoOutside</string>
     <string name="go_outside">Go Outside</string>
     <string name="logo">logo</string>
+    <string name="title_activity_dashboard">dashboard</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="search_title">Search</string>
+    <string name="search_for_adventures">Search for adventures…</string>
+    <string name="lets_go_exp">Lets Go Explore!</string>
 </resources>
