--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="search_title">Search</string>
     <string name="search_for_adventures">Search for adventures…</string>
     <string name="lets_go_exp">Lets Go Explore!</string>
+    <string name="image">image</string>
 </resources>
